--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
 * text=auto
-*.css linguist-vendored
-*.scss linguist-vendored
-*.js linguist-vendored
+public/css/app.css linguist-vendored
+public/js/app.js linguist-vendored
 CHANGELOG.md export-ignore
