--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,37 @@
-APP_NAME=Laravel
+APP_NAME="Graduate System"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:/ZculobQFkaS9/PFVU0Wy2mox7jUoBfgrd3iqez4Q3I=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=
 AUTH_KEY=
+FILESYSTEM_DRIVER=uploads
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_SECURE_COOKIE=false
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
 MAIL_FROM_NAME=
 MAIL_FROM_ADDRESS=
 
